# pySEMTools

./: .gitignore  LICENSE  README.md  build_paper.sh  format_doc.sh  install.sh  paper.bib  paper.md  pyproject.toml  setup.py
.github/workflows/: check_lint.yml  check_unit_test.yml  docs.yml  draft-pdf.yml  main.yml
doc/: conf.py  index.rst
doc/pages/: adios2.rst  coef.rst  datatypes.rst  field.rst  interpolation.rst  io.rst  msh.rst  ppymech.rst  probes.rst
examples/: README.md
examples/1-datatypes_and_io/: 1-datatypes_io.ipynb  2-sem_subdomains.ipynb  3-data_compression.ipynb
examples/1.datatypes_and_io/: 1.datatypes_io.ipynb  2.sem_subdomains.ipynb  README.md
examples/10-mapping-grouping/: elem_group.py  mappings.py
examples/10-mapping_grouping/: elem_group.py  mappings.py
examples/1d_data_processing/: 1d_data_processing.ipynb  1d_data_processing.py
examples/2-paralell_data_transfer/: data_transfer.py
examples/2-parallel_data_transfer/: 1-data_transfer.py  README.md
examples/3-calculus_in_sem_mesh/: 1-differentiation.ipynb  1.5-differentiation_torch.ipynb  2-integration.ipynb  README.md
examples/4-interpolation/: 2-element_interpolation.ipynb  (+9 more)
scripts/: README.md
source/: conf.py  index.rst  test.rst
tests/: interpolator_test.py  interpolator_test_granular.py  interpret_results.py  sem_test.py  tensor_sem_test.py  test_autograd.py  test_coef.py  test_dssum.py  test_interpolator.py  test_io_data_types.py  test_io_data_types_2D.py  test_io_hdf5.py  test_ppymech.py  test_probes.py  test_rom.py  test_rotations.py  test_statistics.py  test_uq.py
(+211 files in other folders)
