[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pynektools"
version = "0.1.0"
requires-python = ">= 3.10"
dependencies = [
    "numpy",
    "scipy",
    "pre-commit"
    "pymech <= 1.5.0"
]

[project.scripts]
pynektools_index-files = "pynektools.cli.index_files:main"
