[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pysemtools"
version = "0.1.0"
requires-python = ">= 3.10"
dependencies = [
    "numpy",
    "scipy",
    "pre-commit",
    "pymech",
]

[project.scripts]
pysemtools_index-files = "pysemtools.cli.index_files:main"
pysemtools_visnek = "pysemtools.cli.visnek:main"
